k8s/analytics-service/analytics-service-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: analytics-service
  namespace: fiap-tc-f2
 
spec:
  selector:
    matchLabels:
      app: analytics-service
  replicas: 1
  template:
    metadata:
      labels:
        app: analytics-service
    spec:
      containers:
        - name: analytics-service
          image: 226226079541.dkr.ecr.us-east-1.amazonaws.com/fiap-tc-f2-reg:analytics-service-v3
          ports:
            - containerPort: 8005
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 256Mi
        
          livenessProbe:
            httpGet:
              path: /health
              port: 8005
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3 
          
          readinessProbe:
            httpGet:
              path: /health
              port: 8005
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 3
