k8s/analytics-service/analytics-gateway.yml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: analytics-service-gateway
 
spec:
  gatewayClassName: nginx
  listeners:
  - name: http-analytics-service-8005
    protocol: HTTP
    port: 8005
    allowedRoutes:
      namespaces:
        from: Same
