k8s/analytics-service/analytics-service-httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: analytics-service-httproute
 
spec:
  parentRefs:
    - name: analytics-service-gateway
      sectionName: http-analytics-service-8005
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: analytics-service-svc
          port: 8005
